--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#media">Media</a></li>
@@ -64,11 +64,11 @@
                     <p class="lead mb-5">
                         But what to do next with my life?  Enter coding! During the pandemic 
                         I suddenly found myself with lots of extra time and was finally able to
-                        dive into software development full-time.  The pandemic has been hard 
+                        dive into software development full-time.  The pandemic was hard 
                         for a lot of us, but it allowed me the time to attend Hackbright 
-                        Academy and really focus my energy on engineering.  I'm very excited 
-                        about my future career in tech and to share my journey with other 
-                        aspiring devs from non-traditional backgrounds.
+                        Academy and really focus my energy on engineering.  As I progress in 
+                        my career as en engineer my dream is to find a job where I can combine 
+                        my love for coding with my love of the performing arts.
                     </p>
                     <p class="lead mb-5">Learn more about me on my socials: Linkedin, Github, Twitter and Twitch</p>
                     <div class="social-icons">
@@ -77,6 +77,75 @@
                         <a class="social-icon" href="https://twitter.com/LaRenaiocco"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.twitch.tv/larenaiocco"><i class="fab fa-twitch"></i></a>
                         <!-- <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Software Engineer II</h3>
+                            <div class="subheading mb-3">Pinwheel</div>
+                            <ul>
+                                <li>Develop complex integrations for external platforms using Python requests and Selenium Driver in a FastAPI app, improving success rates by an average of 25%, and up to 90% reductions in latency</li>
+                                <li>Design and use use internal and external tools, including Slack apps, dashboards and monitors for observability and features focused on the developer experience</li>
+                                <li>Use knowledge of HTTP requests and general web practices to reverse engineer APIs and avoid bot detection on 500+ external platforms via web scrapers</li>
+                                <li>Develop integration jobs at scale while maintaining over 80% unit and integration test coverage</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Dec. 2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Python Instructor</h3>
+                            <div class="subheading mb-3">Hackbright Academy</div>
+                            <ul>
+                                <li>Teach beginning level computer science concepts and basic python syntax</li>
+                                <li>Update and maintain lesson plans and teaching materials</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Aug. 2022 -  Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Solutions Engineer</h3>
+                            <div class="subheading mb-3">Datadog</div>
+                            <ul>
+                                <li>Responded to client requests on a fast paced team while educating clients on the use of the platform</li>
+                                <li>Reproduced issues from 400+ integrations that Datadog works with</li>
+                                <li>Built out internal documentation and knowledge based articles for a variety of technologies</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Dec. 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Office Manager</h3>
+                            <div class="subheading mb-3">Feld Entertainment</div>
+                            <ul>
+                                <li>Coordinated the daily flow of the NYC based entertainment marketing office.</li>
+                                <li>Maintained budget and sales projection data for the regional VP.</li>
+                                <li>Supported marketing managers at PR events across the tri-state area.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2018 - March 2020</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Clown</h3>
+                            <div class="subheading mb-3">Ringling Bros. and Barnum & Bailey Circus/Kinoshita Circus</div>
+                            <ul>
+                                <li>Coached 20+ new clowns as a senior performer.</li>
+                                <li>Collaborated with teams of up to 12 other clowns to develop original comic material for five different full-length shows.</li>
+                                <li>Consistently learned new skills and developed new acts to enhance performance.</li>
+                                <li>Engaged in public speaking and PR events on local and national tv programs including Saturday Night Live, The Late, Late Show with James Corden and many more.</li>
+                                <li>Performed in a high pressure environment for millions of people in the US, Mexico and Japan.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Nov. 2010 - Sept. 2018</span></div>
                     </div>
                 </div>
             </section>
@@ -169,51 +238,6 @@
                         <div class="project-image-div">
                             <img class="project-image" src="assets/img/buffering.png" />
                         </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Experience-->
-            <section class="resume-section" id="experience">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Solutions Engineer</h3>
-                            <div class="subheading mb-3">Datadog</div>
-                            <ul>
-                                <li>Respond to client requests on a fast paced team while educating clients on the use of the platform.</li>
-                                <li>Reproduce issues from 400+ integrations that Datadog works with.</li>
-                                <li>Build out internal documentation and knowledge based articles for a variety of technologies.</li>
-                            </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Office Manager</h3>
-                            <div class="subheading mb-3">Feld Entertainment</div>
-                            <ul>
-                                <li>Coordinated the daily flow of the NYC based entertainment marketing office.</li>
-                                <li>Maintained budget and sales projection data for the regional VP.</li>
-                                <li>Supported marketing managers at PR events across the tri-state area.</li>
-                            </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2018 - March 2020</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Clown</h3>
-                            <div class="subheading mb-3">Ringling Bros. and Barnum & Bailey Circus/Kinoshita Circus</div>
-                            <ul>
-                                <li>Coached 20+ new clowns as a senior performer.</li>
-                                <li>Collaborated with teams of up to 12 other clowns to develop original comic material for five different full-length shows.</li>
-                                <li>Consistently learned new skills and developed new acts to enhance performance.</li>
-                                <li>Engaged in public speaking and PR events on local and national tv programs including Saturday Night Live, The Late, Late Show with James Corden and many more.</li>
-                                <li>Performed in a high pressure environment for millions of people in the US, Mexico and Japan.</li>
-                            </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Nov. 2010 - Sept. 2018</span></div>
-                    </div>
                 </div>
             </section>
             <hr class="m-0" />
