--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
                         myself ready to settle down in one place and begin new adventures.
                     </p>
                     <p class="lead mb-5">
-                        But what to do next with my life?  Enter coding! During the pandemic 
-                        I suddenly found myself with lots of extra time and was finally able to
-                        dive into software development full-time.  The pandemic was hard 
-                        for a lot of us, but it allowed me the time to attend Hackbright 
-                        Academy and really focus my energy on engineering.  As I progress in 
-                        my career as en engineer my dream is to find a job where I can combine 
-                        my love for coding with my love of the performing arts.
+                        But what to do next with my life now that I was planted in NYC?  
+                        Enter coding! During the pandemic I suddenly found myself with lots 
+                        of extra time and was finally able to dive into software development 
+                        full-time.  The pandemic was hard for a lot of us, but it allowed me 
+                        the time to attend Hackbright Academy and really focus my energy on 
+                        engineering.  As I progress in my career as an engineer my dream is 
+                        to find a job where I can combine my love for coding with my love of 
+                        the performing arts.
                     </p>
                     <p class="lead mb-5">Learn more about me on my socials: Linkedin, Github, Twitter and Twitch</p>
                     <div class="social-icons">
@@ -91,7 +92,7 @@
                             <div class="subheading mb-3">Pinwheel</div>
                             <ul>
                                 <li>Develop complex integrations for external platforms using Python requests and Selenium Driver in a FastAPI app, improving success rates by an average of 25%, and up to 90% reductions in latency</li>
-                                <li>Design and use use internal and external tools, including Slack apps, dashboards and monitors for observability and features focused on the developer experience</li>
+                                <li>Design and use internal and external tools, including Slack apps, dashboards and monitors for observability and features focused on the developer experience</li>
                                 <li>Use knowledge of HTTP requests and general web practices to reverse engineer APIs and avoid bot detection on 500+ external platforms via web scrapers</li>
                                 <li>Develop integration jobs at scale while maintaining over 80% unit and integration test coverage</li>
                             </ul>
@@ -103,11 +104,11 @@
                             <h3 class="mb-0">Python Instructor</h3>
                             <div class="subheading mb-3">Hackbright Academy</div>
                             <ul>
-                                <li>Teach beginning level computer science concepts and basic python syntax</li>
-                                <li>Update and maintain lesson plans and teaching materials</li>
+                                <li>Taught beginning level computer science concepts and basic python syntax</li>
+                                <li>Updated and maintained lesson plans and teaching materials on the student portal website</li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Aug. 2022 -  Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Aug. 2022 -  Aug. 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -155,8 +156,6 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                         <h3 class="mb-0">Adventure Awaits</h3>
-                        <span><a href="http://adventure-awaits.fun">http://adventure-awaits.fun</a></span>
-                        | 
                         <span><a href="https://github.com/LaRenaiocco/travel-web-app">Github</a></span>
                         <p>Plan the perfect adventure with your friends.  Adventure Awaits 
                             is a full stack web app that allows you, the user, to create 
@@ -190,8 +189,6 @@
                         </div>
                         <br />
                         <h3 class="mb-0">Community Library</h3>
-                        <a href="http://52.205.251.141/">http://52.205.251.141</a>
-                        | 
                         <span><a href="https://github.com/LaRenaiocco/community-library">Github</a></span>
                         <p>Community Library is a full stack web app that I developed with 
                             the goal of learning how to work with the Cloudinary image 
@@ -307,6 +304,8 @@
                         <li>CLI</li>
                         <li>Git, Github</li>
                         <li>AWS Lightsail</li>
+                        <li>Docker</li>
+                        <li>Circle CI</li>
                         <li>Google Maps APIs</li>
                         <li>Cloudinary API</li>
                         <li>Twilio API</li>
